--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.3.1",
+    "@types/serve-favicon": "^2.5.4",
     "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
     "eslint-plugin-prettier": "^4.2.1",
