feat: 🐛 adjusted projects

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -16,11 +16,15 @@
     "url": "https://anzunator.hellogirls.info"
   },
   {
-    "title": "enstars marriage survey data visualization",
+    "title": "marriage survey data vis",
     "url": "https://hellogirls.info/projects/marriage-survey-results"
   },
   {
     "title": "pc rice",
     "url": "https://github.com/hellogirls-js/dotfiles"
+  },
+  {
+    "title": "enstars height comparison",
+    "url": "https://height-comparison.hellogirls.info"
   }
 ]
