updated projects list

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -26,5 +26,21 @@
   {
     "title": "enstars height comparison",
     "url": "https://height-comparison.hellogirls.info"
+  },
+  {
+    "title": "lovely~cupid",
+    "url": "https://lovelycupid.hellogirls.info"
+  },
+  {
+    "title": "follower popularity survey",
+    "url": "https://www.hellogirls.info/projects/survey/2023"
+  },
+  {
+    "title": "tabPOP",
+    "url": "https://tabpop.hellogirls.info"
+  },
+  {
+    "title": "enstars webring",
+    "url": "https://webring.hellogirls.info"
   }
 ]
