fix: :bug: made a bunch of adjustments

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -42,5 +42,13 @@
   {
     "title": "enstars webring",
     "url": "https://webring.hellogirls.info"
+  },
+  {
+    "title": "enstars dating",
+    "url": "https://dating.hellogirls.info"
+  },
+  {
+    "title": "hold hands?",
+    "url": "https://holdhands.hellogirls.info"
   }
 ]
