--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "son HELLOGlRLS",
+  "author": "son hellogirls_dev",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
