--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -13,7 +13,11 @@
   },
   {
     "title": "anzunator",
-    "url": "https://anzunator.hellogirls.info"
+    "url": "https://hellogirls.info/projects/anzunator"
+  },
+  {
+    "title": "dr. sakasaki's personality quiz",
+    "url": "https://www.hellogirls.info/projects/enstars-fan-quiz"
   },
   {
     "title": "marriage survey data vis",
