--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
